Add id for 5090 variant - reported in PR kern/40524 by Andrew Daugherity.